@@ -17,10 +17,9 @@
   </lang>
   <autodetect>
     <general>
-      <commandset>LDL,DYN</commandset>
-      <description>Deskjet F2100</description>
-      <manufacturer>hp</manufacturer>
-      <model>Deskjet F2100</model>
+      <commandset>LDL,MLC,PML,DYN</commandset>
+      <manufacturer>HP</manufacturer>
+      <model>Deskjet F2100 series</model>
     </general>
   </autodetect>
   <functionality>B</functionality>
